src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  background: rgb(251, 254, 251);
  color: #111827;
}

ul li a.active {
  text-decoration-line: underline;
  text-decoration-style: wavy;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

.single-post h2 {
  font-weight: 700;
  font-size: 1.5em;
  margin-top: 2em;
  margin-bottom: 0.5em;
  line-height: 1.3333333;
}

.single-post h2 + .single-post h3 {
  margin-top: 0;
}

.single-post h3 {
  margin-top: 1.6em;
  margin-bottom: 0.6em;
  font-weight: 600;
  font-size: 1.25em;
  line-height: 1.6;
  font-style: italic;
}

.single-post img {
  margin-top: 1.6rem;
  margin-bottom: 1.6rem;
}

/* programing language color */
.text-blue-800 {
  background-color: rgb(30 64 175);
}
.text-yellow-700 {
  background-color: rgb(161 98 7);
}
/* programing language color */

code:not([class*="language-"]) {
  background-color: #e5e7eb;
  color: #111827;
  font-weight: 600;
  font-size: 0.875em;
  padding: 3px 5px;
  border-radius: 4px;
}

pre[class*="language-"] {
  border-radius: 4px;
}

code[class*="language-"],
pre[class*="language-"] {
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  color: #eee;
  background: #2f2f2f;
  font-family: Roboto Mono, monospace;
  line-height: 1.5em;

  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;

  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

code[class*="language-"]::-moz-selection,
pre[class*="language-"]::-moz-selection,
code[class*="language-"] ::-moz-selection,
pre[class*="language-"] ::-moz-selection {
  background: #363636;
}

code[class*="language-"]::selection,
pre[class*="language-"]::selection,
code[class*="language-"] ::selection,
pre[class*="language-"] ::selection {
  background: #363636;
}

:not(pre) > code[class*="language-"] {
  white-space: normal;
  border-radius: 0.2em;
  padding: 0.1em;
}

pre[class*="language-"] {
  overflow: auto;
  position: relative;
  margin: 0.5em 0;
  padding: 1.25em 1em;
}

.language-css > code,
.language-sass > code,
.language-scss > code {
  color: #fd9170;
}

[class*="language-"] .namespace {
  opacity: 0.7;
}

.token.atrule {
  color: #c792ea;
}

.token.attr-name {
  color: #ffcb6b;
}

.token.attr-value {
  color: #a5e844;
}

.token.attribute {
  color: #a5e844;
}

.token.boolean {
  color: #c792ea;
}

.token.builtin {
  color: #ffcb6b;
}

.token.cdata {
  color: #80cbc4;
}

.token.char {
  color: #80cbc4;
}

.token.class {
  color: #ffcb6b;
}

.token.class-name {
  color: #f2ff00;
}

.token.comment {
  color: #616161;
}

.token.constant {
  color: #c792ea;
}

.token.deleted {
  color: #ff6666;
}

.token.doctype {
  color: #616161;
}

.token.entity {
  color: #ff6666;
}

.token.function {
  color: #c792ea;
}

.token.hexcode {
  color: #f2ff00;
}

.token.id {
  color: #c792ea;
  font-weight: bold;
}

.token.important {
  color: #c792ea;
  font-weight: bold;
}

.token.inserted {
  color: #80cbc4;
}

.token.keyword {
  color: #c792ea;
}

.token.number {
  color: #fd9170;
}

.token.operator {
  color: #89ddff;
}

.token.prolog {
  color: #616161;
}

.token.property {
  color: #80cbc4;
}

.token.pseudo-class {
  color: #a5e844;
}

.token.pseudo-element {
  color: #a5e844;
}

.token.punctuation {
  color: #89ddff;
}

.token.regex {
  color: #f2ff00;
}

.token.selector {
  color: #ff6666;
}

.token.string {
  color: #a5e844;
}

.token.symbol {
  color: #c792ea;
}

.token.tag {
  color: #ff6666;
}

.token.unit {
  color: #fd9170;
}

.token.url {
  color: #ff6666;
}

.token.variable {
  color: #ff6666;
}

.single-post ol {
  padding-inline-start: 2ch;
  font-weight: 500;
}

.single-post li {
  margin: 10px 0;
}

.single-post ol li::before {
  content: ""; /* Add content: \2022 is the CSS Code/unicode for a bullet */
  display: inline-block; /* Needed to add space between the bullet and the text */
  width: 6px; /* Also needed for space (tweak if needed) */
  margin-right: 1rem; /* Also needed for space (tweak if needed) */
  height: 6px;
  background-color: rgb(209, 209, 209);
  border-radius: 100%;
  margin-bottom: 2px;
}
.single-post ol li a {
  border-bottom-width: 2px;
  border-style: dashed;
  border-color: #111827;
}

.single-post ol li a:hover {
  color: #0369a1;
  border-color: #0369a1;
}

